# qr-code

./: .gitignore  Cargo.toml  README.md  build.rs
src/: assets.rs  event_loop.rs  index_html.rs  main.rs  script.js  startup.rs  style.css
