[package]
name = "qr-code"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["René Kijewski <crates.io@k6i.de>"]
repository = "https://github.com/Kijewski/qr-code"
license = "Apache-2.0"

[dependencies]
ctrlc = { version = "3.4.0", features = ["termination"] }
dirs = "5.0.1"
image = "0.23.14"
log = "0.4.19"
markup = "0.13.1"
open = "5.0.0"
parking_lot = { version = "0.12.1", features = ["arc_lock", "send_guard"] }
pretty_env_logger = "0.5.0"
pretty-error-debug = "0.2.0"
qrcode = "0.12.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_qs = "0.12.0"
svg2pdf = "0.5.0"
tempfile = "3.6.0"
thiserror = "1.0.40"
tinyfiledialogs = "3.9.1"
tz-rs = "0.6.14"
wry = { version = "0.29.0", default-features = false, features = ["protocol"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "=0.48", features = ["Win32_System_Console", "Win32_Foundation"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-manifest = "1.3.1"
